refactor : refactor image save to plug-in

--- a/imagesave/config.ini
+++ b/imagesave/config.ini
@@ -5,6 +5,7 @@ Name: MV-CS060-10GC
 [Image]
 # Avalible type : raw,jpeg,bmp,tiff,png
 Type: png
+# Important! should be insert "/" at last path location
 Save_path: /opt/MVS/
 
 [Env]
